# likelee-ai

./: .cursorrules  .gitignore  .roorules  .windsurfrules  README.md  apply_crm_migrations.sql  firebase.json  package-lock.json  package_full.json  raw_rpc_output.json  storage.rules
.agent/rules/: antigravityrules.md  rules-code.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy-ec2.yml  deploy-firebase-storage.yml  rollback-ec2.yml
.roo/rules/: rules-code.md
deploy/ec2/: .env.example  README.md  (+4 more)
docs/: arc42-guide.md  arc42.md  design.md  er-diagram.md  refactor-frontend-sdks-to-backend.md
likelee-server/: .env.example  Cargo.toml  Dockerfile  audit.toml  package-lock.json  temp_lines.txt
likelee-server/src/: active_licenses.rs  agencies.rs  agency_clients.rs  agency_dashboard.rs  agency_roster.rs  agency_talent_invites.rs  analytics.rs  auth.rs  avatar.rs  billing.rs  book_outs.rs  bookings.rs  bookings_campaigns.rs  brand_campaigns.rs  brands.rs  campaigns.rs  catalogs.rs  config.rs  creatify.rs  creator_agency_connection.rs  creator_rates.rs  creators.rs  dashboard.rs  digitals.rs  email.rs  email_templates.rs  entitlements.rs  errors.rs  expenses.rs  face_profiles.rs  invoices.rs  jobs.rs  kyc.rs  lib.rs  license_submissions.rs  license_templates.rs  licenses.rs  licensing_requests.rs  liveness.rs  main.rs  (+15 more)
likelee-server/src/services/: docuseal.rs  mod.rs
likelee-server/src/studio/: mod.rs  providers.rs  routes.rs  types.rs  wallet.rs
likelee-ui/: .env.example  .gitignore  Dockerfile  README.md  build_log.txt  eslint.config.js  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsc_final.txt  tsc_final_2.txt  tsc_output.txt  tsc_output_2.txt  tsconfig.json  update_all_toasts.py  vite.config.js
(+412 files in other folders)
