[package]
name = "likelee-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["clock"] }
tower-http = { version = "0.5", features = ["cors"] }
postgrest = "1"
