[package]
name = "likelee-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["clock"] }
tower-http = { version = "0.5", features = ["cors"] }
postgrest = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
aws-config = "1"
aws-sdk-rekognition = "1"
aws-types = "1"
envconfig = "0.11"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
kamadak-exif = { version = "0.5" }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
urlencoding = "2"
jsonwebtoken = "9"
stripe-sdk = { package = "async-stripe", version = "0.33.0", features = ["runtime-tokio-hyper-rustls"] }
base64 = "0.22.1"
